--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://MAnojSH5799.github.io/Assessment-tool",
-  "name": "Assessment-tool",
+  "homepage": "https://MAnojSH5799.github.io/Assessment/saathi-open-source",
+  "name": "saathi-open-source",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
