--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MAnojSH5799.github.io/Assessment",
+  "homepage": "http://MAnojSH5799.github.io/",
   "name": "Assessment-tool",
   "version": "0.1.0",
   "private": true,
